# ChangeLog for dev-php5/xdebug
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/ChangeLog,v 1.7 2006/10/09 07:08:34 sebastian Exp $

*xdebug-2.0.0_rc1 (09 Oct 2006)

  09 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +xdebug-2.0.0_rc1.ebuild:
  Version bump.

*xdebug-2.0.0_beta6 (04 Jul 2006)

  04 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -xdebug-2.0.0_beta5.ebuild, +xdebug-2.0.0_beta6.ebuild:
  Version bump.

  15 Feb 2006; Markus Rothe <corsair@gentoo.org> xdebug-2.0.0_beta5.ebuild:
  Added ~ppc64; bug #121874

  10 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  xdebug-2.0.0_beta5.ebuild:
  Keyworded ~sparc wrt #121874

  07 Feb 2006; <nixnut@gentoo.org> xdebug-2.0.0_beta5.ebuild:
  Added ~ppc keyword. bug 121874

  20 Jan 2006; Konstantin Arkhipov <voxus@gentoo.org>
  xdebug-2.0.0_beta5.ebuild:
  Added ~amd64 keyword.

*xdebug-2.0.0_beta5 (31 Dec 2005)

  31 Dec 2005; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +xdebug-2.0.0_beta5.ebuild:
  Initial ebuild.
