@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/xdebug
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/ChangeLog,v 1.7 2006/10/09 07:08:34 sebastian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/ChangeLog,v 1.8 2006/10/24 07:50:15 sebastian Exp $
+
+  24 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  -xdebug-2.0.0_beta6.ebuild, xdebug-2.0.0_rc1.ebuild:
+  Clean up old versions. Enable build of debugclient, closes bug #152589.
 
 *xdebug-2.0.0_rc1 (09 Oct 2006)
 
